--- a/src/client/modules/components/notification-list/style.css
+++ b/src/client/modules/components/notification-list/style.css
@@ -1,13 +1,13 @@
 .notification-list {
-  position: absolute;
+  position: fixed;
   top: 0;
-  left: 0;
-  right: 0;
-  z-index: 3;
+  z-index: 4;
 
   margin: 0;
   padding: 0;
+  width: 1024px;
 
+  background-color: #fff;
   list-style-type: none;
 }
 
