--- a/src/client/modules/components/phase-table/template.html
+++ b/src/client/modules/components/phase-table/template.html
@@ -3,7 +3,7 @@
     <tr>
       <td></td>
       {{#each weeks}}
-      <td>{{>date}}</td>
+      <td class="week-label">{{>date}}</td>
       {{/each}}
     </tr>
     <tr>
