--- a/src/client/modules/components/phase-table/template.html
+++ b/src/client/modules/components/phase-table/template.html
@@ -22,7 +22,7 @@
   </thead>
   <tbody>
     {{#each visiblePhases:phaseIdx}}
-      <bp-phase-table-row
+      <wr-phase-table-row
         phase="{{visiblePhases[phaseIdx]}}"
         data-num-weeks="{{numWeeks}}"
         data-first-week="{{firstWeek}}" />
