--- a/src/client/modules/components/review/template.html
+++ b/src/client/modules/components/review/template.html
@@ -54,7 +54,7 @@
     </thead>
     <tbody>
       {{#each phase.employees}}
-      <bp-employee-row
+      <wr-employee-row
         date="{{ date }}"
         employee="{{this}}"
         phase="{{phase}}"
