--- a/src/client/modules/components/layout/style.css
+++ b/src/client/modules/components/layout/style.css
@@ -10,14 +10,14 @@
 }
 
 main {
-  opacity: 1;
-  -webkit-transition: opacity 0.2s;
-  -moz-transition: opacity 0.2s;
-  transition: opacity 0.2s;
+  transform: translateY(0);
+  -webkit-transition: transform 0.2s;
+  -moz-transition: transform 0.2s;
+  transition: transform 0.2s;
 }
 main.is-loading {
-  opacity: 0.2;
-  -webkit-transition: opacity 2s;
-  -moz-transition: opacity 2s;
-  transition: opacity 2s;
+  transform: translateY(8000px);
+  -webkit-transition: transform 2s;
+  -moz-transition: transform 2s;
+  transition: transform 2s;
 }
