Honor UtilizationType's `project_required` field
Currently, the UI limits setting utilization Project information to only
those utilizations with the "type" of "Consulting". Besides requiring
the hard-coding of the "Consulting" type's ID, this also incorrectly
limits the types of utilizations that may be assigned to specific
projects. The Nest API server already responds to requests for
"utilization types" with a boolean field designed for this purpose:
`project_required`.

Update the `UtilizationType` model to accept the `project_required`
field and update the UI to honor it.

--- a/src/client/modules/components/review-employee-row-day/template.html
+++ b/src/client/modules/components/review-employee-row-day/template.html
@@ -14,7 +14,7 @@
   <label for="{{dayName}}{{employee.id}}" class="front" style="{{ style }}" on-dragstart="handleDragstart()" on-dragend="handleDragend()" draggable="true">
     {{#with utilization}}
     <span class="utilization-type">{{ type.name }}</span>
-    {{#if type.isConsulting}}
+    {{#if type.project_required}}
       <span class="utilization-project">{{ project.name }}</span>
     {{/if}}
     {{/with}}
@@ -28,7 +28,7 @@
     </select>
 
     <select id="{{dayName}}{{employee.id}}-position"
-      {{#if !newType.isConsulting}}disabled{{/if}}
+      {{#if !newType.project_required}}disabled{{/if}}
       value="{{newPosition}}">
 
       <option selected disabled>Position</option>
@@ -38,7 +38,7 @@
     </select>
 
     <select id="{{dayName}}{{employee.id}}-project"
-      {{#if !newType.isConsulting}}disabled{{/if}}
+      {{#if !newType.project_required}}disabled{{/if}}
       value="{{newProject}}">
 
       <option selected disabled>Project</option>
@@ -51,7 +51,7 @@
     </select>
 
     <select id="{{dayName}}{{employee.id}}-phase"
-      {{#if !newType.isConsulting || !phases.length}}disabled{{/if}}
+      {{#if !newType.project_required || !phases.length}}disabled{{/if}}
       value="{{newPhase}}">
 
       {{! TODO: Remove the value assigned to the `disabled` attribute once the
