--- a/src/client/modules/components/review-employee-row-day/template.html
+++ b/src/client/modules/components/review-employee-row-day/template.html
@@ -24,7 +24,7 @@
     {{#with utilization}}
     <span class="utilization-type">{{ type.name }}</span>
     {{#if type.project_required}}
-      <span class="utilization-project">{{ newProject.name }}</span>
+      <span class="utilization-project">{{ newProject.org.name }} - {{ newProject.name }}</span>
       <span class="utilization-phase">{{ newPhase.name }}</span>
     {{/if}}
     {{/with}}
@@ -43,10 +43,10 @@
 
       <option selected disabled>Project</option>
       {{#each activeProjects}}
-      <option value="{{id}}">{{name}}</option>
+      <option value="{{id}}">{{org.name}} - {{name}}</option>
       {{/each}}
       {{#each phaselessProjects}}
-      <option value="{{id}}">{{name}}</option>
+      <option value="{{id}}">{{org.name}} - {{name}}</option>
       {{/each}}
     </select>
 
